Adding multi-target regression methods introduced in this article: https://ieeexplore.ieee.org/abstract/document/9206984
List of changes:
-Adding implementations of multi-target regression methods based on output space quantization proposed in https://ieeexplore.ieee.org/abstract/document/9206984
-Updating Weka version
-Creating a pom.xml file and getting some dependencies from Maven.
-Updating Evaluator to support evaluation of oracle learners (with access to ground truth values)
-Adding implementation of example-based squared error

--- a/mulan/.classpath
+++ b/mulan/.classpath
@@ -1,14 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="src" output="target/test-classes" path="test"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
+	<classpathentry including="**/*.java" kind="src" output="target/classes" path="src">
+		<attributes>
+			<attribute name="optional" value="true"/>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="src" output="target/test-classes" path="test">
+		<attributes>
+			<attribute name="optional" value="true"/>
+			<attribute name="maven.pomderived" value="true"/>
+			<attribute name="test" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="lib" path="lib/test/junit-4.10.jar"/>
 	<classpathentry kind="lib" path="lib/Clus.jar"/>
-	<classpathentry kind="lib" path="lib/weka-3.7.12.jar"/>
 	<classpathentry kind="lib" path="lib/matlabcontrol-4.1.0.jar"/>
-	<classpathentry kind="lib" path="lib/partialLeastSquares-1.0.1.jar"/>
 	<classpathentry kind="lib" path="lib/LibLINEAR-1.9.8.jar"/>
 	<classpathentry kind="lib" path="lib/liblinear-java-1.96-SNAPSHOT.jar"/>
+	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
